--- a/admin.html
+++ b/admin.html
@@ -132,13 +132,20 @@
         </section>
         <section class="lg:col-span-2 space-y-6">
             <div class="bg-white dark:bg-darkcard rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6">
-                <h2 class="text-lg font-bold mb-4 flex items-center gap-2">
-                    <i data-lucide="layers" class="w-5 h-5 text-indigo-500"></i> Master Kelas
-                </h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-lg font-bold flex items-center gap-2">
+                        <i data-lucide="layers" class="w-5 h-5 text-indigo-500"></i> Master Kelas
+                    </h2>
+                    <button onclick="window.openClassManager()"
+                        class="text-xs font-bold text-blue-600 hover:text-blue-800 dark:text-blue-400 flex items-center gap-1 border border-blue-200 dark:border-gray-600 px-3 py-1.5 rounded-lg hover:bg-blue-50 dark:hover:bg-gray-700 transition">
+                        <i data-lucide="settings-2" class="w-3 h-3"></i> Lihat Data Kelas
+                    </button>
+                </div>
+
                 <div class="space-y-4">
                     <div class="relative">
                         <i data-lucide="hash" class="absolute left-3 top-3 w-5 h-5 text-gray-400"></i>
-                        <input type="text" id="inputKelasID" placeholder="Nama Kelas (Contoh: X-RPL)"
+                        <input type="text" id="inputKelasID" placeholder="Buat Kelas Baru (Contoh: X-RPL)"
                             class="w-full pl-10 p-3 rounded-lg border bg-gray-50 dark:bg-gray-800 dark:border-gray-600 uppercase focus:ring-2 focus:ring-indigo-500 outline-none">
                     </div>
                     <button id="btnSaveKelas"
@@ -151,7 +158,8 @@
             <div
                 class="bg-blue-50 dark:bg-slate-800 p-4 rounded-xl text-sm text-blue-800 dark:text-blue-200 border border-blue-100 dark:border-blue-900 flex gap-3">
                 <i data-lucide="info" class="w-5 h-5 flex-shrink-0 mt-0.5"></i>
-                <p><strong>Info:</strong> Pilih kelas di tabel sebelah kanan untuk memfilter daftar siswa.</p>
+                <p><strong>Tips:</strong> Gunakan tombol "Atur & Refresh" di atas jika data kelas tidak muncul
+                    (sinkronisasi data).</p>
             </div>
         </section>
 
