--- a/index.html
+++ b/index.html
@@ -28,31 +28,29 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex h-16 items-center justify-between">
 
-                <!-- LEFT -->
                 <div class="flex items-center gap-3">
-                    <i data-lucide="clipboard-check" class="w-6 h-6 text-indigo-600"></i>
+                    <i data-lucide="clipboard-check" class="w-6 h-6 text-indigo-600 dark:text-indigo-400"></i>
                     <h1 class="text-lg font-bold text-gray-900 dark:text-white">
                         Absensi
                     </h1>
                 </div>
 
-                <!-- RIGHT DESKTOP -->
                 <div class="hidden md:flex items-center gap-4">
                     <a href="admin.html"
-                        class="admin-only hidden flex items-center gap-2 px-3 py-2 text-xs font-bold text-purple-700 bg-purple-100 rounded-lg">
+                        class="admin-only hidden flex items-center gap-2 px-3 py-2 text-xs font-bold text-purple-700 bg-purple-100 hover:bg-purple-200 rounded-lg transition dark:bg-purple-900/30 dark:text-purple-300">
                         <i data-lucide="shield" class="w-4 h-4"></i> Admin Panel
                     </a>
 
                     <button onclick="openMonthlyModal()"
-                        class="flex items-center gap-2 px-3 py-2 text-xs font-bold text-indigo-700 bg-indigo-50 rounded-lg">
+                        class="flex items-center gap-2 px-3 py-2 text-xs font-bold text-indigo-700 bg-indigo-50 hover:bg-indigo-100 rounded-lg transition dark:bg-indigo-900/30 dark:text-indigo-300">
                         <i data-lucide="bar-chart-3" class="w-4 h-4"></i> Rekap
                     </button>
 
                     <div class="h-6 w-px bg-gray-300 dark:bg-gray-600"></div>
+
                     <div id="navbar-profile"></div>
                 </div>
 
-                <!-- MOBILE BUTTON -->
                 <button id="mobile-menu-btn"
                     class="md:hidden p-2 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">
                     <i data-lucide="menu" class="w-6 h-6"></i>
@@ -60,17 +58,15 @@
             </div>
         </div>
 
-        <!-- MOBILE MENU -->
         <div id="mobile-menu"
             class="hidden md:hidden bg-white dark:bg-darkcard border-t border-gray-200 dark:border-gray-700">
             <div class="px-4 py-4 space-y-2">
-
                 <div class="border-b dark:border-gray-700 pb-3 mb-2">
                     <div id="navbar-profile-mobile"></div>
                 </div>
 
                 <a href="admin.html"
-                    class="admin-only hidden flex items-center gap-3 px-3 py-3 rounded-lg text-purple-700 bg-purple-50">
+                    class="admin-only hidden flex items-center gap-3 px-3 py-3 rounded-lg text-purple-700 bg-purple-50 dark:bg-purple-900/20 dark:text-purple-300">
                     <i data-lucide="shield" class="w-5 h-5"></i> Admin Panel
                 </a>
 
@@ -83,25 +79,9 @@
                     class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
                     <i data-lucide="sun-moon" class="w-5 h-5"></i> Ganti Tema
                 </button>
-
-                <button onclick="handleLogout()"
-                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
-                    <i data-lucide="log-out" class="w-5 h-5"></i> Keluar
-                </button>
             </div>
         </div>
     </nav>
-
-
-    <div id="lockedMessage"
-        class="hidden bg-purple-600 text-white text-center py-2 font-bold text-sm tracking-wide shadow-md flex justify-center items-center gap-2">
-        <i data-lucide="lock" class="w-4 h-4"></i> DATA TERKUNCI (READ ONLY)
-    </div>
-    <div id="unsavedMsg"
-        class="hidden bg-yellow-500 text-white text-center py-2 font-bold text-sm tracking-wide shadow-md flex justify-center items-center gap-2 animate-pulse">
-        <i data-lucide="alert-triangle" class="w-4 h-4"></i> Ada perubahan belum disimpan!
-    </div>
-
     <main class="flex-1 max-w-5xl mx-auto w-full p-4 space-y-6">
 
         <div
@@ -137,10 +117,10 @@
             </div>
 
             <div
-                class="bg-white dark:bg-darkcard rounded-xl shadow-lg overflow-hidden border border-gray-200 dark:border-gray-700">
+                class="bg-transparent md:bg-white md:dark:bg-darkcard rounded-xl md:shadow-lg overflow-hidden md:border border-gray-200 dark:border-gray-700">
                 <table id="tabelAbsensi" class="w-full text-left hidden">
                     <thead
-                        class="bg-gray-100 dark:bg-gray-700/50 text-gray-600 dark:text-gray-300 uppercase text-xs font-bold">
+                        class="bg-gray-100 dark:bg-gray-700/50 text-gray-600 dark:text-gray-300 uppercase text-xs font-bold hidden md:table-header-group">
                         <tr>
                             <th class="p-4 w-1/2">Nama Siswa</th>
                             <th class="p-4 w-1/2">Status Kehadiran</th>
@@ -203,7 +183,8 @@
                     <thead
                         class="sticky top-0 z-30 bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-300 shadow-sm">
                         <tr id="headerRowBulanan">
-                            <th class="p-4 text-left font-medium italic">Silakan pilih bulan dan klik "Lihat Data" untuk
+                            <th class="p-4 text-left font-medium italic">Silakan pilih bulan dan klik "Lihat Data"
+                                untuk
                                 menyusun laporan...</th>
                         </tr>
                     </thead>
@@ -216,7 +197,8 @@
                 <span
                     class="font-mono font-bold bg-white dark:bg-gray-700 px-2 py-1 rounded border dark:border-gray-600">Legend:
                     H=Hadir, S=Sakit, I=Izin, A=Alpa</span>
-                <span class="flex items-center gap-1"><i data-lucide="info" class="w-3 h-3"></i> Arahkan kursor ke sel
+                <span class="flex items-center gap-1"><i data-lucide="info" class="w-3 h-3"></i> Arahkan kursor ke
+                    sel
                     untuk melihat detail</span>
             </div>
         </div>
